--- a/StartTool/StartTool.csproj
+++ b/StartTool/StartTool.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5FFE6544-6176-4A29-A1C5-7E804B171B51}</ProjectGuid>
+    <ProjectGuid>{C7F6D0D7-B1AB-4744-B03C-4160A9CFB69B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>RemoteControl</RootNamespace>
-    <AssemblyName>RemoteControl</AssemblyName>
+    <RootNamespace>StartTool</RootNamespace>
+    <AssemblyName>StartTool</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\BootTool\BootTool\bin\Debug\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -47,26 +50,23 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="TcpServerRoot">
-      <HintPath>..\TcpServerRoot\bin\Debug\netstandard2.0\TcpServerRoot.dll</HintPath>
+    <Reference Include="TcpClientRoot">
+      <HintPath>..\TcpClientRoot\bin\Debug\netstandard2.0\TcpClientRoot.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WindowsInput">
+      <HintPath>..\WindowsInput\bin\Debug\WindowsInput.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ClientControl.xaml.cs">
-      <DependentUpon>ClientControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ServerManger.cs" />
-    <Page Include="ClientControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <Compile Include="ClientManger.cs" />
+    <Compile Include="Simulation.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -98,7 +98,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
