--- a/RemoteControl/RemoteControl.csproj
+++ b/RemoteControl/RemoteControl.csproj
@@ -66,6 +66,9 @@
     <Compile Include="ClientControl.xaml.cs">
       <DependentUpon>ClientControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SendFrame.xaml.cs">
+      <DependentUpon>SendFrame.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ServerManger.cs" />
     <Page Include="ClientControl.xaml">
       <SubType>Designer</SubType>
@@ -83,6 +86,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SendFrame.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
